<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#193a25bc"
        app:cardCornerRadius="5dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/dealImage"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:contentDescription="@string/deal_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="258dp"
                android:layout_height="34dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/Title"
                android:textAppearance="@style/travelTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dealImage" />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="2dp"
                android:fontFamily="@font/fanwood_text"
                android:text="@string/Description"
                android:textAlignment="textStart"
                android:textAppearance="@style/travelDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textViewTitle"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

            <TextView
                android:id="@+id/textViewPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/carter_one"
                android:text="@string/Price"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_price"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>